[package]
name = "rusty_crypto"
version = "0.1.0"
edition = "2021"
authors = ["lopo<lopo@zju.edu.cn>"]
license = "MIT"
keywords = ["crypto", "rusty", "wasm", "webassembly"]

[lib]
crate-type = ["cdylib"]

[dependencies]
aes = "0.8.2"
base64 = "0.20.0-alpha.1"
cbc = "0.1.2"
md5 = "0.7.0"
wasm-bindgen = "0.2.83"
